PVE分流最大RAM 10G -> 8G，並改用ZGC