@@ -1,2 +1,2 @@
-screen java -server -Xmx10G -jar pve_core.jar nogui
+screen java -server -Xmx8G -XX:+UseZGC -jar pve_core.jar nogui
 
